--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,6 +49,15 @@
         
         </div>
 
+        <div class="chat-container">
+            <iframe
+                allow="microphone;"
+                width="350"
+                height="430"
+                src="https://console.dialogflow.com/api-client/demo/embedded/e25ae602-694f-465f-9498-0ece9c7bed6e">
+            </iframe>
+        </div>
+
         <footer>
             <h3>Find me to discuss the movie</h3>
              
